@@ -1,5 +1,6 @@
 pngs = \
   close-button.png         \
+  close-button-active.png  \
   titlebar-left-edge.png   \
   titlebar-right-edge.png  \
   titlebar-tile.png        \
