@@ -16,6 +16,7 @@
 <pixmap id="titlebar-right-edge" filename="titlebar-right-edge.png" />  
 <pixmap id="titlebar-tile" filename="titlebar-tile.png" />
 <pixmap id="close-button" filename="close-button.png" />
+<pixmap id="close-button-active" filename="close-button-active.png" />
 <pixmap id="dia-left-edge" filename="dia-left-edge.png" />
 <pixmap id="dia-right-edge" filename="dia-right-edge.png" />  
 <pixmap id="dia-tile" filename="dia-tile.png" />
@@ -40,7 +41,7 @@
   <button x="0" y="0" w="60%" h="48" action="custom" options="inputonly" />
 
   <button x="100%-48" y="8" w="32" h="32" action="close" >
-   <active pixmap="close-button" blend="100"/>
+   <active pixmap="close-button-active"/>
    <inactive pixmap="close-button"  />
   </button>
 
@@ -71,7 +72,7 @@
    type="label" color="text" justify="left" font="titlefont" />
 
   <button x="100%-48" y="8" w="32" h="32" action="close" >
-   <active pixmap="close-button" blend="100"/>
+   <active pixmap="close-button-active" />
    <inactive pixmap="close-button"  />
   </button>
 </frame>
